[gd_scene load_steps=2 format=3 uid="uid://dnpahehrirrfg"]

[ext_resource type="Script" uid="uid://dm011mfayvsn" path="res://src/ui/hud.gd" id="1_19uhp"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_19uhp")

[node name="Root" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Root"]
self_modulate = Color(1, 1, 1, 0.95)
layout_mode = 0
offset_right = 360.0
offset_bottom = 120.0

[node name="VBox" type="VBoxContainer" parent="Root/Panel"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 352.0
offset_bottom = 112.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HiddenTitle" type="Label" parent="Root/Panel/VBox"]
modulate = Color(0.85, 0.85, 0.85, 1)
layout_mode = 2
text = "STATUS"

[node name="HiddenStatusLabel" type="Label" parent="Root/Panel/VBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.8)
theme_override_constants/line_spacing = 6
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 36
text = "VISIBLE"

[node name="DetectionTitle" type="Label" parent="Root/Panel/VBox"]
modulate = Color(0.85, 0.85, 0.85, 1)
layout_mode = 2
text = "DETECTION"

[node name="DetectionBar" type="ProgressBar" parent="Root/Panel/VBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(320, 28)
layout_mode = 2
step = 0.0
show_percentage = false

[node name="DirectionFX" type="Control" parent="Root"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Vignette" type="ColorRect" parent="Root/DirectionFX"]
visible = false
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
mouse_filter = 2
color = Color(0, 0, 0, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
